Add Spotify solution

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Spotify</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -18,15 +18,17 @@
       </nav>
     </header>
 
-    <section>
-      <h1>Music for everyone.</h1>
-      <p>
-        Spotify is now free on mobile, tablet and computer.
-        Listen to the right music, wherever you are.
-      </p>
+    <section class="big-section">
+      <div>
+        <h1>Music for everyone.</h1>
+        <p>
+          Spotify is now free on mobile, tablet and computer. <br />
+          Listen to the right music, wherever you are.
+        </p>
+      </div>
     </section>
 
-    <section>
+    <section class="features">
       <h2>What's on Spotify?</h2>
       <ul>
         <li>
@@ -49,40 +51,36 @@
       </ul>
     </section>
 
-    <section>
+    <section class="kanye">
       <div>
         <h2>It's as yeezy as Kanye West.</h2>
 
-        <div>
-          <ul>
-            <li>
-              <h3>Search</h3>
-              <p>
-                Know what you want to listen to?
-                Just search and hit play.
-              </p>
-            </li>
+        <ul>
+          <li>
+            <h3>Search</h3>
+            <p>
+              Know what you want to listen to?
+              Just search and hit play.
+            </p>
+          </li>
 
-            <li>
-              <h3>Browse</h3>
-              <p>
-                Check out the latest charts,
-                brand new releases and great
-                playlists for right now.
-              </p>
-            </li>
+          <li>
+            <h3>Browse</h3>
+            <p>
+              Check out the latest charts,
+              brand new releases and great
+              playlists for right now.
+            </p>
+          </li>
 
-            <li>
-              <h3>Discover</h3>
-              <p>
-                Enjoy new music every Monday with your own personal playlist.
-                Or sit back and enjoy Radio.
-              </p>
-            </li>
-          </ul>
-
-          <img src="./images/spotify-icon.png" />
-        </div>
+          <li>
+            <h3>Discover</h3>
+            <p>
+              Enjoy new music every Monday with your own personal playlist.
+              Or sit back and enjoy Radio.
+            </p>
+          </li>
+        </ul>
       </div>
 
       <img src="./images/kanye.jpg" />
